--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ SECRET_KEY=change_this_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_MINUTES=30
 BASE_URL=http://127.0.0.1:8000
+
+ALLOWED_IMAGE_EXT=jpg,jpeg,png,gif,webp
+ALLOWED_VIDEO_EXT=mp4,mov,avi,mkv,webm
+ALLOWED_DOC_EXT=pdf,doc,docx
