--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = mysql+pymysql://root@localhost:3306/lmsdb
+sqlalchemy.url = mysql+pymysql://root@localhost:3306/lmsdb9dec
 #sqlalchemy_url = "mysql+pymysql://lmcuser:DasLmc%40745v@192.168.60.210:3306/lmcdb"
 
 
